# nheqminer

./: CMakeLists.txt  README.md
cuda_djezo/: CMakeLists.txt  check.h  eqcuda.hpp  equi_miner.cu
djezo/: CMakeLists.txt  digit_1.cuh  digit_2.cuh  digit_3.cuh  digit_4.cuh  digit_5.cuh  digit_6.cuh  digit_7.cuh  digit_8.cuh  digit_first.cuh  digit_last_wdc.cuh  djezo.cu  djezo.hpp  equi_miner.cu
nheqminer/: AvailableSolvers.h  MinerFactory.cpp  MinerFactory.h  main.cpp
xenoncat/: CMakeLists.txt  xenoncat.cpp
xenoncat/asm/: Makefile
xenoncat/cmake/: CMakeASM_FASMInformation.cmake
